feat(message-log): implement namespace-based file storage and improve log handling
- Add `messageLogPath` configuration to support custom log file storage paths
- Refactor file-based message log repository to organize logs by namespace and week
- Update log file naming convention to `message_logs__{namespace}__{weekStart}.log`
- Enhance log loading and querying logic to filter by namespace
- Propagate `Bootstrap` config to repository constructors for better configuration access
- Improve error handling with proper `merr` usage for not-found cases
- Adjust internal APIs to support namespace-scoped operations for message logs

--- a/.env.example
+++ b/.env.example
@@ -95,3 +95,8 @@ MOON_RABBIT_METRICS_BASIC_AUTH_PASSWORD=rabbit.metrics
 # Logging Configuration
 # =============================================================================
 MOON_RABBIT_CONFIG_PATHS=./datasource
+
+# =============================================================================
+# Message Log Path Configuration
+# =============================================================================
+MOON_RABBIT_MESSAGE_LOG_PATH=./messages
