feat(server): implement configurable HTTP/gRPC/Job component activation
- Add ServerOptions to parse enableHttp/enableGrpc/enableJob from config or CLI
- Refactor RegisterService to conditionally register components based on options
- Update server command flags to support --http/--grpc/--job switches
- Modify dependency injection to use unified ProviderSetServer with conditional logic
- Add validation to ensure at least one server component is enabled
- Update configuration proto and YAML with new enable flags
- Improve HTTP server discovery in Servers slice with dedicated httpServer() method
- Set default component activation: HTTP/gRPC enabled, Job disabled in server mode
- Enable all components by default in run mode for backward compatibility
- Add environment variable support for component activation control

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -7,6 +7,9 @@ useDatabase: ${MOON_RABBIT_USE_DATABASE:false}
 server:
   name: ${MOON_RABBIT_NAME:moon.rabbit}
   useRandomID: ${MOON_RABBIT_USE_RANDOM_ID:false}
+  enableHttp: ${MOON_RABBIT_SERVER_ENABLE_HTTP:}
+  enableGrpc: ${MOON_RABBIT_SERVER_ENABLE_GRPC:}
+  enableJob: ${MOON_RABBIT_SERVER_ENABLE_JOB:}
   metadata:
     tag: ${MOON_RABBIT_METADATA_TAG:rabbit}
     repository: ${MOON_RABBIT_METADATA_REPOSITORY:https://github.com/aide-family/rabbit}
