feat(config): rename event bus worker count to worker total and add buffer size
- Rename `workerCount` to `workerTotal` in event bus configuration
- Add `bufferSize` field to event bus config with default value 1000
- Update environment variable from `MOON_RABBIT_EVENT_BUS_WORKER_COUNT`
  to `MOON_RABBIT_EVENT_BUS_WORKER_TOTAL`
- Add new env var `MOON_RABBIT_EVENT_BUS_BUFFER_SIZE`
- Update flag parsing to use `--event-bus-worker-total` and
  `--event-bus-buffer-size`
- Modify message bus implementation to use `workerTotal` instead of
  `workerCount`
- Pass worker ID to individual workers for better logging and tracing
- Add `message-log-path` flag for specifying message log directory

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -40,7 +40,7 @@ main:
     loc: Asia/Shanghai
 
 eventBus:
-  workerCount: ${MOON_RABBIT_EVENT_BUS_WORKER_COUNT:10}
+  workerTotal: ${MOON_RABBIT_EVENT_BUS_WORKER_TOTAL:10}
   timeout: ${MOON_RABBIT_EVENT_BUS_TIMEOUT:10s}
   bufferSize: ${MOON_RABBIT_EVENT_BUS_BUFFER_SIZE:1000}
   
