--- a/config/server.yaml
+++ b/config/server.yaml
@@ -71,5 +71,5 @@ metricsBasicAuth:
   username: ${MOON_RABBIT_METRICS_BASIC_AUTH_USERNAME:moon.rabbit}
   password: ${MOON_RABBIT_METRICS_BASIC_AUTH_PASSWORD:rabbit.metrics}
 
-configPaths: ${MOON_RABBIT_CONFIG_PATHS:./datasource}
-messageLogPath: ${MOON_RABBIT_MESSAGE_LOG_PATH:./messages/}
+configPaths: ${MOON_RABBIT_CONFIG_PATHS:}
+messageLogPath: ${MOON_RABBIT_MESSAGE_LOG_PATH:}
