feat(event-bus): rename message bus to event bus and add dedicated server
- Rename all instances of `MessageBus` to `EventBus` across the codebase
- Introduce new `EventBusServer` configuration and implementation
- Update proto definitions and configuration files accordingly
- Refactor related components to align with the new naming and structure
- Add new environment variables for event bus server configuration
- Adjust flag parsing and configuration loading logic for event bus core settings

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,11 @@ MOON_RABBIT_GRPC_ADDRESS=0.0.0.0:9090
 MOON_RABBIT_GRPC_NETWORK=tcp
 MOON_RABBIT_GRPC_TIMEOUT=10s
 
+# eventBus Server
+MOON_RABBIT_EVENT_BUS_ADDRESS=0.0.0.0:9091
+MOON_RABBIT_EVENT_BUS_NETWORK=grpc
+MOON_RABBIT_EVENT_BUS_TIMEOUT=10s
+
 # =============================================================================
 # JWT Configuration
 # =============================================================================
@@ -48,9 +53,9 @@ MOON_RABBIT_MAIN_USE_SYSTEM_LOGGER=true
 # =============================================================================
 # Event Bus Configuration
 # =============================================================================
-MOON_RABBIT_EVENT_BUS_WORKER_TOTAL=10
-MOON_RABBIT_EVENT_BUS_TIMEOUT=10s
-MOON_RABBIT_EVENT_BUS_BUFFER_SIZE=1000
+MOON_RABBIT_EVENT_BUS_CORE_WORKER_TOTAL=10
+MOON_RABBIT_EVENT_BUS_CORE_TIMEOUT=10s
+MOON_RABBIT_EVENT_BUS_CORE_BUFFER_SIZE=1000
 
 # =============================================================================
 # Registry Configuration
