feat(job): introduce job service and refactor event bus components
- Add a new job service to handle asynchronous message processing, replacing the previous event bus implementation.
- Update configuration files and proto definitions to reflect the new job service structure.
- Refactor related components, including message handling and service registration, to integrate the job service.
- Modify command flags and server setup to support the new job service alongside HTTP and gRPC services.
- Remove deprecated event bus code and ensure all references are updated to the new job service.

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ MOON_RABBIT_ENVIRONMENT=PROD
 MOON_RABBIT_ENABLE_CLIENT_CONFIG=true
 MOON_RABBIT_ENABLE_SWAGGER=true
 MOON_RABBIT_ENABLE_METRICS=true
-MOON_RABBIT_USE_DATABASE=true
+MOON_RABBIT_USE_DATABASE=false
 
 # =============================================================================
 # Server Configuration
@@ -16,6 +16,9 @@ MOON_RABBIT_USE_DATABASE=true
 MOON_RABBIT_NAME=moon.rabbit
 MOON_RABBIT_USE_RANDOM_ID=false
 MOON_RABBIT_METADATA_TAG=rabbit
+MOON_RABBIT_METADATA_REPOSITORY=https://github.com/aide-family/rabbit
+MOON_RABBIT_METADATA_AUTHOR=Aide Family
+MOON_RABBIT_METADATA_EMAIL=aidecloud@163.com
 
 # HTTP Server
 MOON_RABBIT_HTTP_ADDRESS=0.0.0.0:8080
@@ -27,10 +30,10 @@ MOON_RABBIT_GRPC_ADDRESS=0.0.0.0:9090
 MOON_RABBIT_GRPC_NETWORK=tcp
 MOON_RABBIT_GRPC_TIMEOUT=10s
 
-# eventBus Server
-MOON_RABBIT_EVENT_BUS_ADDRESS=0.0.0.0:9091
-MOON_RABBIT_EVENT_BUS_NETWORK=grpc
-MOON_RABBIT_EVENT_BUS_TIMEOUT=10s
+# Job Server (EventBus)
+MOON_RABBIT_JOB_ADDRESS=0.0.0.0:9091
+MOON_RABBIT_JOB_NETWORK=grpc
+MOON_RABBIT_JOB_TIMEOUT=10s
 
 # =============================================================================
 # JWT Configuration
@@ -51,11 +54,11 @@ MOON_RABBIT_MAIN_DEBUG=false
 MOON_RABBIT_MAIN_USE_SYSTEM_LOGGER=true
 
 # =============================================================================
-# Event Bus Configuration
+# Job Core Configuration
 # =============================================================================
-MOON_RABBIT_EVENT_BUS_CORE_WORKER_TOTAL=10
-MOON_RABBIT_EVENT_BUS_CORE_TIMEOUT=10s
-MOON_RABBIT_EVENT_BUS_CORE_BUFFER_SIZE=1000
+MOON_RABBIT_JOB_CORE_WORKER_TOTAL=10
+MOON_RABBIT_JOB_CORE_TIMEOUT=10s
+MOON_RABBIT_JOB_CORE_BUFFER_SIZE=1000
 
 # =============================================================================
 # Registry Configuration
@@ -65,8 +68,8 @@ MOON_RABBIT_REGISTRY_TYPE=
 # =============================================================================
 # Cluster Configuration
 # =============================================================================
-MOON_RABBIT_CLUSTER_NAME=rabbit
-MOON_RABBIT_CLUSTER_ENDPOINTS=localhost:9090
+MOON_RABBIT_CLUSTER_NAME=moon.rabbit
+MOON_RABBIT_CLUSTER_ENDPOINTS=
 MOON_RABBIT_CLUSTER_PROTOCOL=GRPC
 MOON_RABBIT_CLUSTER_TIMEOUT=10s
 
@@ -100,9 +103,9 @@ MOON_RABBIT_METRICS_BASIC_AUTH_PASSWORD=rabbit.metrics
 # =============================================================================
 # Logging Configuration
 # =============================================================================
-MOON_RABBIT_CONFIG_PATHS=./datasource
+MOON_RABBIT_CONFIG_PATHS=
 
 # =============================================================================
 # Message Log Path Configuration
 # =============================================================================
-MOON_RABBIT_MESSAGE_LOG_PATH=./messages
+MOON_RABBIT_MESSAGE_LOG_PATH=
