feat(run): restructure command organization and introduce run command hierarchy
- Refactor the command structure to consolidate HTTP, gRPC, and job services under a new `run` command.
- Remove deprecated server command and related flags, streamlining the command interface.
- Introduce new flags and configuration handling for the `run` command, enhancing flexibility in service management.
- Implement dedicated subcommands for running all services, HTTP, gRPC, and job services individually.
- Update documentation and help outputs to reflect the new command structure and usage.

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -1,7 +1,7 @@
 environment: ${MOON_RABBIT_ENVIRONMENT:PROD}
-enableClientConfig: ${MOON_RABBIT_ENABLE_CLIENT_CONFIG:true}
-enableSwagger: ${MOON_RABBIT_ENABLE_SWAGGER:true}
-enableMetrics: ${MOON_RABBIT_ENABLE_METRICS:true}
+enableClientConfig: ${MOON_RABBIT_ENABLE_CLIENT_CONFIG:false}
+enableSwagger: ${MOON_RABBIT_ENABLE_SWAGGER:false}
+enableMetrics: ${MOON_RABBIT_ENABLE_METRICS:false}
 useDatabase: ${MOON_RABBIT_USE_DATABASE:false}
 
 server:
