feat(config): update environment variables and logging structure
- Change default service name and namespace in configuration files for clarity.
- Remove commented-out repository cloning in Dockerfile to streamline the build process.
- Update Go module file to comment out local replace directives for better clarity.
- Introduce a new initialization function for logging setup in the application.
- Refactor command flags to include default values for improved usability.
- Enhance configuration loading to eliminate unnecessary debug log outputs.

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -5,7 +5,8 @@ enableMetrics: ${MOON_RABBIT_ENABLE_METRICS:false}
 useDatabase: ${MOON_RABBIT_USE_DATABASE:false}
 
 server:
-  name: ${MOON_RABBIT_NAME:moon.rabbit}
+  name: ${MOON_RABBIT_NAME:rabbit}
+  namespace: ${MOON_RABBIT_NAMESPACE:moon}
   useRandomID: ${MOON_RABBIT_USE_RANDOM_ID:false}
   metadata:
     tag: ${MOON_RABBIT_METADATA_TAG:rabbit}
@@ -63,7 +64,6 @@ etcd:
 
 kubernetes:
   kubeConfig: ${MOON_RABBIT_KUBERNETES_KUBECONFIG:~/.kube/config}
-  namespace: ${MOON_RABBIT_KUBERNETES_NAMESPACE:moon}
 
 swaggerBasicAuth:
   enabled: ${MOON_RABBIT_SWAGGER_BASIC_AUTH_ENABLED:true}
