--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,8 @@ MOON_RABBIT_USE_DATABASE=false
 # =============================================================================
 # Server Configuration
 # =============================================================================
-MOON_RABBIT_NAME=moon.rabbit
+MOON_RABBIT_NAME=rabbit
+MOON_RABBIT_NAMESPACE=moon
 MOON_RABBIT_USE_RANDOM_ID=false
 MOON_RABBIT_METADATA_TAG=rabbit
 MOON_RABBIT_METADATA_REPOSITORY=https://github.com/aide-family/rabbit
@@ -84,7 +85,6 @@ MOON_RABBIT_ETCD_PASSWORD=
 # Kubernetes Configuration
 # =============================================================================
 MOON_RABBIT_KUBERNETES_KUBECONFIG=~/.kube/config
-MOON_RABBIT_KUBERNETES_NAMESPACE=moon
 
 # =============================================================================
 # Swagger Basic Auth Configuration
