feat(config): update environment variable names and enhance documentation
- Renamed environment variables for clarity: `MOON_RABBIT_NAME` to `MOON_RABBIT_SERVER_NAME`, `MOON_RABBIT_NAMESPACE` to `MOON_RABBIT_SERVER_NAMESPACE`, and `MOON_RABBIT_USE_RANDOM_ID` to `MOON_RABBIT_USE_RANDOM_NODE_ID`.
- Updated the Docker and Kubernetes deployment documentation to reflect these changes.
- Enhanced README files with new sections for Docker and Kubernetes deployment instructions, including detailed commands and configuration examples.
- Improved consistency in command flags and documentation across English and Chinese versions.

--- a/deploy/server/docker/docker-compose.yml
+++ b/deploy/server/docker/docker-compose.yml
@@ -43,7 +43,7 @@ services:
     # command: ["config", "--path", "/moon/config"]
     # command: ["run", "--config", "/moon/config/server.yaml"]
     # command: ["run", "--use-database", "true", "--main-host", "mysql"]
-    command: [ "run" ]
+    command: [ "run", "all" ]
     healthcheck:
       test: [ "CMD", "/usr/local/bin/rabbit", "version" ]
       interval: 30s
