--- a/config/server.yaml
+++ b/config/server.yaml
@@ -5,9 +5,9 @@ enableMetrics: ${MOON_RABBIT_ENABLE_METRICS:false}
 useDatabase: ${MOON_RABBIT_USE_DATABASE:false}
 
 server:
-  name: ${MOON_RABBIT_NAME:rabbit}
-  namespace: ${MOON_RABBIT_NAMESPACE:moon}
-  useRandomID: ${MOON_RABBIT_USE_RANDOM_ID:false}
+  name: ${MOON_RABBIT_SERVER_NAME:rabbit}
+  namespace: ${MOON_RABBIT_SERVER_NAMESPACE:moon}
+  useRandomID: ${MOON_RABBIT_USE_RANDOM_NODE_ID:false}
   metadata:
     tag: ${MOON_RABBIT_METADATA_TAG:rabbit}
     repository: ${MOON_RABBIT_METADATA_REPOSITORY:https://github.com/aide-family/rabbit}
