feat(job): switch job server network from grpc to tcp
- Update `.env.example` to change `MOON_RABBIT_JOB_NETWORK` default value from `grpc` to `tcp`
- Remove deprecated `MOON_RABBIT_CLUSTER_PROTOCOL` environment variable
- Expose port 9091 in Dockerfile for job server
- Update README files to reflect job network configuration changes
- Modify config parsing to remove protocol option and hardcode grpc
- Refactor message repository to remove protocol switching logic
- Simplify cluster sender implementation to only support grpc
- Update proto definitions to match simplified job service API
- Adjust related function calls and error messages accordingly

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -23,7 +23,7 @@ server:
     timeout: "${MOON_RABBIT_GRPC_TIMEOUT:10s}"
   job:
     address: "${MOON_RABBIT_JOB_ADDRESS:0.0.0.0:9091}"
-    network: "${MOON_RABBIT_JOB_NETWORK:grpc}"
+    network: "${MOON_RABBIT_JOB_NETWORK:tcp}"
     timeout: "${MOON_RABBIT_JOB_TIMEOUT:10s}"
 
 jwt:
@@ -54,7 +54,6 @@ registryType: ${MOON_RABBIT_REGISTRY_TYPE:}
 cluster:
   name: ${MOON_RABBIT_CLUSTER_NAME:moon.rabbit}
   endpoints: ${MOON_RABBIT_CLUSTER_ENDPOINTS:}
-  protocol: ${MOON_RABBIT_CLUSTER_PROTOCOL:GRPC}
   timeout: ${MOON_RABBIT_CLUSTER_TIMEOUT:10s}
 
 etcd:
