feat(config): add protocol support for job and cluster configurations
- Add `MOON_RABBIT_JOB_PROTOCOL` and `MOON_RABBIT_CLUSTER_PROTOCOL` to `.env.example`
- Update default port exposures in Dockerfile from 8080/9090/9091 to 10070/10080/10090
- Enhance README documentation with new environment variables and Kubernetes deployment steps
- Refactor flag parsing to use `time.Duration` directly instead of string parsing
- Introduce protocol-based client connection initialization (GRPC or HTTP)
- Improve error handling during bootstrap configuration loading
- Adjust Kubernetes manifests to use `moon` namespace instead of `rabbit`
- Update server configuration defaults and expose protocol options in YAML config
- Remove unused dependencies related to string and pointer utilities
- Fix minor issues in command-line argument parsing logic for timeouts and protocols

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,7 @@ MOON_RABBIT_GRPC_TIMEOUT=10s
 MOON_RABBIT_JOB_ADDRESS=0.0.0.0:9091
 MOON_RABBIT_JOB_NETWORK=tcp
 MOON_RABBIT_JOB_TIMEOUT=10s
+MOON_RABBIT_JOB_PROTOCOL=GRPC
 
 # =============================================================================
 # JWT Configuration
@@ -72,6 +73,7 @@ MOON_RABBIT_REGISTRY_TYPE=
 MOON_RABBIT_CLUSTER_NAME=moon.rabbit
 MOON_RABBIT_CLUSTER_ENDPOINTS=
 MOON_RABBIT_CLUSTER_TIMEOUT=10s
+MOON_RABBIT_CLUSTER_PROTOCOL=GRPC
 
 # =============================================================================
 # ETCD Configuration
