--- a/deploy/server/docker/docker-compose.yml
+++ b/deploy/server/docker/docker-compose.yml
@@ -6,8 +6,9 @@ services:
     image: rabbit-local:latest
     container_name: rabbit
     ports:
-      - "${RABBIT_HTTP_PORT:-8080}:8080" # HTTP 端口
-      - "${RABBIT_GRPC_PORT:-9090}:9090" # gRPC 端口
+      - "${RABBIT_HTTP_PORT:-10080}:10080" # HTTP 端口
+      - "${RABBIT_GRPC_PORT:-10090}:10090" # gRPC 端口
+      - "${RABBIT_JOB_PORT:-10070}:10070" # Job 端口
     environment:
       # 基础配置
       - MOON_RABBIT_ENVIRONMENT=${MOON_RABBIT_ENVIRONMENT:-PROD}
